# nostr-rs-ext

./: Cargo.toml  LICENSE  README.md  build.rs  config.toml
ext/: Cargo.toml
ext/src/: main.rs
plugins/welcome/: Cargo.toml
plugins/welcome/src/: lib.rs
src/: config.rs  grpc.rs  lib.rs  main.rs  plugins.rs  server.rs
welcome/: Cargo.toml
