[package]
name = "nostr-rs-ext"
version = "0.1.0"
edition = "2021"
authors = ["Otherlayer <otherlayer@pm.me>"]
description = "gRPC extensions (plugins) server for nostr-rs-relay"
readme = "README.md"
repository = "https://github.com/otherlayer/nostr-rs-ext/"
license = "MIT"
keywords = ["nostr", "nostr-rs", "relay", "extension", "plugin"]

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.2.0"
tonic = "0.8.3"
tokio = { version = "1", features = ["full", "tracing", "signal"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0.32", features = ["env", "default", "derive"]}
config = { version = "0.12", features = ["toml"] }
libloading = "0.7"

nostr-rs-proto = "0.1.0"
nostr-rs-plugin = "0.1.0"

[dev-dependencies]

[build-dependencies]
tonic-build = { version="0.8.3", features = ["prost"] }
